# xty

./: README.md
.roo/: mcp.json
goconsumer/: go.mod  main.go
goservice/: go.mod  go.sum  main.go
goservice/api/: handler.go
goservice/config/: config.go
goservice/internal/: utils.go
goservice/nacos/: register.go
goservice/service/: service.go
jade_slip_backend/: backend.py  main.py  pyproject.toml
mcp_server/: main.py  pyproject.toml
nginx-1.18.0/: check.bat
nginx-1.18.0/conf/: nginx.conf
nginx-1.18.0/html/hmdp/: blog-detail.html  blog-edit.html  index.html  info-edit.html  info.html  login.html  login2.html  other-info.html  shop-detail.html  shop-list.html
nginx-1.18.0/html/hmdp/css/: blog-detail.css  blog-edit.css  element.css  index.css  info.css  login.css  main.css  shop-detail.css  shop-list.css
src/main/java/com/hmdp/controller/: BlogController.java  FollowController.java
src/main/java/com/hmdp/mapper/: UserMapper.java
src/main/java/com/hmdp/service/impl/: BlogServiceImpl.java  FollowServiceImpl.java  ShopServiceImpl.java  UserServiceImpl.java  VoucherOrderServiceImpl.java
src/main/java/com/hmdp/utils/: LoginInterceptor.java  RedisIdWorker.java  RefreshTokenInterceptor.java
src/main/resources/: application.yaml
src/test/java/com/hmdp/: HmDianPingApplicationTests.java
