[project]
name = "jade-slip-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.122.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.4",
    "uvicorn>=0.38.0",
]
# pyproject.toml (文件底部)
[tool.uv.scripts]
# 定义一个名为 start-kb 的脚本，用于启动知识库后端服务
start-kb = "uvicorn backend:app --host 127.0.0.1 --port 8000 --reload"
